Add comments in the selection sort file for better understanding

--- a/selection_sort.ipynb
+++ b/selection_sort.ipynb
@@ -18,11 +18,19 @@
     "#Function to sort the array through selection sort\n",
     "def SelectionSort(arr):\n",
     "    n = len(arr)\n",
+    "    \n",
+    "    #Traversing through every index\n",
     "    for i in range(n):\n",
+    "    \n",
+    "        #current minimum value's index\n",
     "        min_ind = i\n",
+    "        \n",
+    "        #Comparing minimum index to all the remaining indexes\n",
     "        for j in range(i+1, n):\n",
     "            if arr[min_ind] > arr[j]:\n",
     "                min_ind = j\n",
+    "        \n",
+    "        #swapping minimum value to the right position\n",
     "        arr[i], arr[min_ind] = arr[min_ind], arr[i]"
    ]
   },
@@ -32,7 +40,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Function to print the array\n",
     "def printArray(arr):\n",
+    "    \n",
+    "    #Printing the array\n",
+    "    print(\"The Sorted array is:\")\n",
+    "    \n",
+    "    #\"*\" prints all the values of a list separated by a unit space\n",
     "    print(*arr)"
    ]
   },
@@ -45,17 +59,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n",
-      "9 5 4 8 6 2 3 1 7\n",
-      "1 2 3 4 5 6 7 8 9\n"
+      "1 5 0 9 7 5 4 6 9 8 2 5 3\n",
+      "The Sorted array is:\n",
+      "0 1 2 3 4 5 5 5 6 7 8 9 9\n"
      ]
     }
    ],
    "source": [
+    "#Driver Code\n",
     "if __name__ == '__main__':\n",
-    "    n = int(input())\n",
+    "    \n",
+    "    #Input the array\n",
     "    arr = list(map(int, input().split()))\n",
+    "    \n",
+    "    #Appy Selection Sort\n",
     "    SelectionSort(arr)\n",
+    "    \n",
+    "    #print the sorted array\n",
     "    printArray(arr)"
    ]
   },
